modules/network/nt-igw.tf
#-----------------
# Internet Gateway
#-----------------

resource "aws_internet_gateway" "main" {
  
  vpc_id = var.vpc_id
  
  tags = merge(
    {
      "Name" = "eks-igw-1"
    },
    var.tags
  )
}
