modules/network/nt-sg.tf
#----------------
# Cloud Endure SG
#----------------

resource "aws_security_group" "this"{
  
  name_prefix = "Cloud Endure Security Group"
  
  vpc_id = var.vpc_id

  ingress {
    from_port = 443
    to_port = 443
    protocol = "tcp"
    cidr_blocks = [
      "0.0.0.0/0"
    ]
  }

  ingress {
    from_port = 6443
    to_port = 6443
    protocol = "tcp"
    cidr_blocks = [
      "0.0.0.0/0"
    ]
  }

  egress{
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = [
      "0.0.0.0/0"
    ]
  }

  tags = merge(
    {
      "Name" = "sg1"
    },
    var.tags
  )
}
